fix for labels or long text getting cut off on nearby/search page

--- a/compass/sass/screen.scss
+++ b/compass/sass/screen.scss
@@ -1282,9 +1282,8 @@ body.two-col.bp{
                     }
                     .restaurant_menu_item_wrapper{
                         @include container;
-                        height: 95px;
                         border-top: 1px solid $light_gray;
-                        padding:10px 10px 0 10px;
+                        padding:10px 10px 10px 10px;
                         $content-columns: ceil(15);
                         @include column($content-columns, true);
                         position: relative;
@@ -1319,7 +1318,7 @@ body.two-col.bp{
                         .desc_block_2_col{
                             $content-columns: ceil(11);
                             @include column($content-columns, true);
-                            padding:0px 21px 10px 10px;
+                            padding:0px 21px 0px 10px;
                             h1{
                                 color: $blue;
                                 padding:0 0 3px 0;
